--- a/scss/pages/_classement.scss
+++ b/scss/pages/_classement.scss
@@ -9,13 +9,13 @@
     position: relative;
     z-index: 5;
     width: 80%;
+    margin: 10vh 10% 10vh 10%;
 
     @include mixins.breakpoint(900px) {
         width: 90%;
         margin: 10vh 5% 10vh 5%;
     }
 
-    margin: 10vh 10% 10vh 10%;
     border-bottom: solid 4px #fff;
     color: #fff;
 
@@ -37,7 +37,7 @@
             text-align: center;
         }
     }
-    .player:nth-last-child(3) {
+    .player:nth-child(1) {
         grid-column: 2 / 3;
         grid-row: 2 / 4;
         border-top: 4px solid #fff;
@@ -51,7 +51,7 @@
         }
 
     }
-    .player:nth-last-of-type(2) {
+    .player:nth-child(2) {
         grid-column: 1 / 2;
         grid-row: 3 / 4;
         border-left: 4px solid #fff;
@@ -62,11 +62,12 @@
             height: auto;
         }
     }
-    .player:nth-last-of-type(1){
+    .player:nth-child(3) {
         grid-column: 3 / 4;
         grid-row: 3 / 4;
         border-right: 4px solid #fff;
         border-top: 4px solid #fff;
+        background-color: brown;
 
         img {
             width: 80px;
@@ -146,6 +147,7 @@
 
         h1 {
             font-size: 50px;
+            text-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
 
             @include mixins.breakpoint(900px) {
                 font-size: 35px;
@@ -154,6 +156,7 @@
         h2 {
             line-height: 2px;
             font-size: 35px;
+            text-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
 
             @include mixins.breakpoint(900px) {
                 font-size: 25px;
