--- a/public/style.css
+++ b/public/style.css
@@ -805,6 +805,10 @@ footer {
   background-color: rgba(14, 34, 37, 0.7);
   height: 78px;
   opacity: 0.7;
+  border-bottom: none;
+  border-left: 4px solid #fff;
+  border-top: 4px solid #fff;
+  border-right: 4px solid #fff;
 }
 .div-game .div-tour .tour {
   text-align: center;
@@ -824,11 +828,13 @@ footer {
   border-right: 4px solid #fff;
   font-size: 50px;
   text-align: center;
-  background-color: rgba(14, 34, 37, 0.7);
   cursor: pointer;
 }
 .div-game .titre-event p {
   text-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
+}
+.div-game .title-cat-event {
+  background-color: rgba(14, 34, 37, 0.7);
 }
 .div-game .event {
   grid-column: 1/2;
@@ -859,6 +865,34 @@ footer {
   gap: 20px;
   padding-top: 20px;
   background-color: rgba(14, 34, 37, 0.7);
+}
+
+.div-game-tour .div-tour {
+  border-bottom: none;
+  border-left: 4px solid #fff;
+  border-right: 4px solid #fff;
+  border-top: 4px solid #fff;
+  padding: 0;
+  background-color: rgba(14, 34, 37, 0.7);
+}
+.div-game-tour .titre-event {
+  border: none;
+  border-bottom: 4px solid #fff;
+  padding: 8px 12px 5px 12px;
+  background-color: none;
+}
+.div-game-tour .titre-event div {
+  border-bottom: none;
+  border-left: 4px solid #fff;
+  border-right: 4px solid #fff;
+  border-top: 4px solid #fff;
+  height: 78px;
+  opacity: 0.7;
+  background-color: rgba(14, 34, 37, 0.7);
+}
+.div-game-tour .titre-event div:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 .next {
