--- a/scss/pages/_game.scss
+++ b/scss/pages/_game.scss
@@ -23,6 +23,10 @@
             background-color: rgba(14, 34, 37, 0.7);
             height: 78px;
             opacity: 0.7;
+            border-bottom: none;
+            border-left: 4px solid #fff;
+            border-top: 4px solid #fff;
+            border-right: 4px solid #fff;
         }
 
         .tour {
@@ -48,12 +52,14 @@
         border-right: 4px solid #fff;
         font-size: 50px;
         text-align: center;
-        background-color: rgba(14, 34, 37, 0.7);
         cursor: pointer;
 
         p {
             text-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
         }
+    }
+    .title-cat-event {
+        background-color: rgba(14, 34, 37, 0.7);
     }
 
     .event {
@@ -89,6 +95,40 @@
         gap: 20px;
         padding-top: 20px;
         background-color: rgba(14, 34, 37, 0.7);
+    }
+}
+
+
+.div-game-tour {
+
+    .div-tour {
+        border-bottom: none;
+        border-left: 4px solid #fff;
+        border-right: 4px solid #fff;
+        border-top: 4px solid #fff;
+        padding: 0;
+        background-color: rgba(14, 34, 37, 0.7);
+    }
+
+    .titre-event {
+        border: none;
+        border-bottom: 4px solid #fff;
+        padding: 8px 12px 5px 12px;
+        background-color: none;
+
+        div {
+            border-bottom: none;
+            border-left: 4px solid #fff;
+            border-right: 4px solid #fff;
+            border-top: 4px solid #fff;
+            height: 78px;
+            opacity: 0.7;
+            background-color: rgba(14, 34, 37, 0.7);
+        }
+        div:hover {
+            cursor: pointer;
+            opacity: 1;
+        }
     }
 }
 
