--- a/public/style.css
+++ b/public/style.css
@@ -797,6 +797,15 @@ footer {
   color: #fff;
   font-family: "Koulen";
 }
+@media screen and (max-width: 700px) {
+  .div-game {
+    width: 90%;
+    margin: 10vh 5% 10vh 5%;
+    border: 4px solid #fff;
+    grid-template-columns: 1fr;
+    grid-template-rows: 90px 90px 1fr 1fr;
+  }
+}
 .div-game .div-tour {
   grid-column: 1/2;
   grid-row: 1/2;
@@ -804,6 +813,11 @@ footer {
   font-size: 50px;
   padding: 8px 12px 5px 12px;
   cursor: pointer;
+}
+@media screen and (max-width: 700px) {
+  .div-game .div-tour {
+    border: none;
+  }
 }
 .div-game .div-tour div {
   background-color: rgba(14, 34, 37, 0.7);
@@ -813,6 +827,11 @@ footer {
   border-left: 4px solid #fff;
   border-top: 4px solid #fff;
   border-right: 4px solid #fff;
+}
+@media screen and (max-width: 700px) {
+  .div-game .div-tour div {
+    border: none;
+  }
 }
 .div-game .div-tour .tour {
   text-align: center;
@@ -834,6 +853,13 @@ footer {
   text-align: center;
   cursor: pointer;
 }
+@media screen and (max-width: 700px) {
+  .div-game .titre-event {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    border: none;
+  }
+}
 .div-game .titre-event p {
   text-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
 }
@@ -851,12 +877,22 @@ footer {
   padding-left: 10%;
   background-color: rgba(14, 34, 37, 0.7);
 }
+@media screen and (max-width: 700px) {
+  .div-game .event {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    border: none;
+    padding: 15px;
+    text-align: center;
+  }
+}
 .div-game .event .eventDesc, .div-game .event .tourP {
   font-family: "Metrophobic";
   text-align: justify;
 }
 .div-game .event .tourP:nth-child(1) {
-  font-size: 30px;
+  font-size: 1.69rem;
+  margin-bottom: 20px;
 }
 .div-game .event h2 {
   font-size: 30px;
@@ -873,6 +909,27 @@ footer {
   padding-top: 20px;
   background-color: rgba(14, 34, 37, 0.7);
 }
+@media screen and (max-width: 700px) {
+  .div-game .visuel-cartes {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    border: none;
+    padding-top: 0px;
+  }
+}
+.div-game .visuel-cartes div:first-child {
+  display: flex;
+  justify-content: center;
+}
+.div-game .visuel-cartes img {
+  width: 85%;
+  height: auto;
+}
+@media screen and (max-width: 700px) {
+  .div-game .visuel-cartes .next {
+    margin-bottom: 45px;
+  }
+}
 
 .div-game-tour .div-tour {
   border-bottom: none;
@@ -882,11 +939,25 @@ footer {
   padding: 0;
   background-color: rgba(14, 34, 37, 0.7);
 }
+@media screen and (max-width: 700px) {
+  .div-game-tour .div-tour {
+    border: none;
+  }
+}
 .div-game-tour .titre-event {
   border: none;
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid #ffffff;
   padding: 8px 12px 5px 12px;
-  background-color: none;
+}
+@media screen and (max-width: 700px) {
+  .div-game-tour .titre-event {
+    border: none;
+  }
+}
+@media screen and (max-width: 700px) {
+  .div-game-tour .titre-event .btn-event {
+    border: none;
+  }
 }
 .div-game-tour .titre-event div {
   border-bottom: none;
@@ -900,6 +971,38 @@ footer {
 .div-game-tour .titre-event div:hover {
   cursor: pointer;
   opacity: 1;
+}
+.div-game-tour .event {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  border-left: none;
+  border-right: 4px solid #fff;
+  padding-left: 0px;
+  padding-right: 10%;
+}
+@media screen and (max-width: 700px) {
+  .div-game-tour .event {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    border: none;
+    padding: 15px;
+  }
+}
+.div-game-tour .event .tourP {
+  text-align: center;
+}
+.div-game-tour .visuel-cartes {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  border-right: none;
+  border-left: 4px solid #fff;
+}
+@media screen and (max-width: 700px) {
+  .div-game-tour .visuel-cartes {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    border: none;
+  }
 }
 
 .next {
