--- a/scss/pages/_game.scss
+++ b/scss/pages/_game.scss
@@ -1,3 +1,5 @@
+@use 'mixins';
+
 .div-game {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -9,6 +11,15 @@
     margin: 10vh 10% 10vh 10%;
     color: #fff;
     font-family: 'Koulen';
+
+    @include mixins.breakpoint(700px) {
+        width: 90%;
+        margin: 10vh 5% 10vh 5%;
+        border: 4px solid #fff;
+
+        grid-template-columns: 1fr;
+        grid-template-rows: 90px 90px 1fr 1fr;
+    }
     
 
     .div-tour {
@@ -19,6 +30,11 @@
         padding: 8px 12px 5px 12px;
         cursor: pointer;
 
+        @include mixins.breakpoint(700px) {
+            border: none;
+        }
+
+
         div {
             background-color: rgba(14, 34, 37, 0.7);
             height: 78px;
@@ -27,6 +43,10 @@
             border-left: 4px solid #fff;
             border-top: 4px solid #fff;
             border-right: 4px solid #fff;
+
+            @include mixins.breakpoint(700px) {
+                border: none;
+            }
         }
 
         .tour {
@@ -54,6 +74,12 @@
         text-align: center;
         cursor: pointer;
 
+        @include mixins.breakpoint(700px) {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+            border: none;
+        }
+
         p {
             text-shadow: 0px 4.88px 4.88px rgba(0, 0, 0, 0.25);
         }
@@ -74,13 +100,22 @@
         padding-left: 10%;
         background-color: rgba(14, 34, 37, 0.7);
 
+        @include mixins.breakpoint(700px) {
+            grid-column: 1 / 2;
+            grid-row: 3 / 4;
+            border: none;
+            padding: 15px;
+            text-align: center;
+        }
+
         .eventDesc, .tourP {
             font-family: 'Metrophobic';
             text-align: justify;
         }
 
         .tourP:nth-child(1){
-            font-size: 30px;
+            font-size: 1.69rem;
+            margin-bottom: 20px;
         }
 
         h2 {
@@ -99,6 +134,29 @@
         gap: 20px;
         padding-top: 20px;
         background-color: rgba(14, 34, 37, 0.7);
+
+        @include mixins.breakpoint(700px) {
+            grid-column: 1 / 2;
+            grid-row: 4 / 5;
+            border: none;
+            padding-top: 0px;
+        }
+
+        div:first-child {
+            display: flex;
+            justify-content: center;
+        }
+
+        img {
+            width: 85%;
+            height: auto;
+        }
+
+        .next {
+            @include mixins.breakpoint(700px) {
+                margin-bottom: 45px;
+            }
+        }
     }
 }
 
@@ -112,13 +170,26 @@
         border-top: 4px solid #fff;
         padding: 0;
         background-color: rgba(14, 34, 37, 0.7);
+
+        @include mixins.breakpoint(700px) {
+            border: none;
+        }
     }
 
     .titre-event {
         border: none;
-        border-bottom: 4px solid #fff;
+        border-bottom: 4px solid #ffffff;
         padding: 8px 12px 5px 12px;
-        background-color: none;
+
+        @include mixins.breakpoint(700px) {
+            border: none;
+        }
+
+        .btn-event {
+            @include mixins.breakpoint(700px) {
+                border: none;
+            }
+        }
 
         div {
             border-bottom: none;
@@ -132,6 +203,39 @@
         div:hover {
             cursor: pointer;
             opacity: 1;
+        }
+    }
+
+    .event {
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        border-left: none;
+        border-right: 4px solid #fff;
+        padding-left: 0px;
+        padding-right: 10%;
+
+        @include mixins.breakpoint(700px) {
+            grid-column: 1 / 2;
+            grid-row: 3 / 4;
+            border: none;
+            padding: 15px;
+        }
+
+        .tourP {
+            text-align: center;
+        }
+    }
+
+    .visuel-cartes {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        border-right: none;
+        border-left: 4px solid #fff;
+
+        @include mixins.breakpoint(700px) {
+            grid-column: 1 / 2;
+            grid-row: 4 / 5;
+            border:none;
         }
     }
 }
